<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BluetoothTest</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_ft">FT</string>
    <string name="action_st">ST</string>
    <string name="action_panel_init">Load Panel</string>
    <string name="action_connect">Connect</string>
    <string name="action_list_device">List Device</string>
    <string name="title_activity_device_control">DeviceControlActivity</string>

</resources>
